Update src/main/java/com/MyApp/budgetControl/ExceptionHandler.java
Co-authored-by: Paweł Włodarczyk <38165006+wlodarcp@users.noreply.github.com>